--- a/Templates/juhaoyongfgstyle/index_model.html
+++ b/Templates/juhaoyongfgstyle/index_model.html
@@ -13,7 +13,7 @@
 <script type="text/javascript" src="/js/jquery.min.js"></script>
 <script type="text/javascript" src="/js/FocusSlide.js"></script>
 <script type="text/javascript" src="/js/ScrollPic.js"></script>
-
+<link href="/css/$web_theme$/inner.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
@@ -30,17 +30,9 @@
 </div>
 
 <div class="TopInfo">
-<div class="link"><a href="/">首 页</a> | <a href="/Sitemap">网站导航</a> | <a href="/Feedback">留言反馈</a></div>
 <div class="clearfix"></div>
 <div class="tel"><p class="telW">$web_tel_title$</p><p class="telN">$web_tel$</p></div>
-<div class="juhaoyongTopSearchClass">
-	<form method="get" action="$search_FolderName$/index.asp">
-	<span class="SearchBar">
-	<input type="text" name="q" id="search-text" size="15" onBlur="if(this.value=='') this.value='请输入关键词';" onfocus="if(this.value=='请输入关键词') this.value='';" value="请输入关键词" />
-	<input type="submit" id="search-submit" value="搜索" />
-	</span>
-	</form>
-</div>
+
 </div>
 
 </div>
@@ -56,7 +48,7 @@ $web_TopMenu$
 <div class="clearfix"></div>
 </div>
 <!--nav end-->
-<!--focus start-->
+<!--幻灯片focus start-->
 
 $web_TopIMGAD$
 
@@ -69,48 +61,50 @@ $web_TopIMGAD$
 <div id="body">
 <!--MainBlock start-->
 <div class="MainBlock">
-<!--left start-->
-<div class="right">
-<div class="topic">
-<div class="TopicTitle"><a href="/$WebAboutFolderName$">$WebAboutName$</a></div>
-<div class="TopicMore"> <a  href='/$WebAboutFolderName$'><img src="images/more.png"></a></div>
-</div>
-<div class='img'><a href='/$WebAboutFolderName$' target='_blank'><img src='/css/$WebAboutImage$' width='242' height='100' alt='$WebAboutName$'></a></div><div class='txt ColorLink'><p>
-$WebAboutContent$...<a href='/$WebAboutFolderName$' target='_blank'>详细>></a></p></div>
-<div class=" clearfix"></div>
 
-</div>
-<!--left end-->
+<!--公司产品-->
+$Block03_LeftItem$
+    <div class="inner">
+        <!--联系我们right2 start-->
+        <div class="left">
+            <div class="topic">
+                <div class="TopicTitle"><a href='$JuhaoyongIndexContactusUrl$'>$JuhaoyongIndexContactusName$</a></div>
+                <div class="TopicMore"> <a href='$JuhaoyongIndexContactusUrl$'><img src="images/more.png" /></a></div>
+            </div>
+            <div class='img'><a href='$JuhaoyongIndexContactusUrl$' target='_blank'><img src='/css/$JuhaoyongIndexContactusImage$' width='242' height='100' alt='$JuhaoyongIndexContactusName$' /></a></div><div class="txt ColorLink">
+                $web_consult$
+            </div>
+
+            <div class=" clearfix"></div>
+
+
+        </div>
+        <!--right2 end-->
+        <!--公告动态right start-->
+        <div class="right">
+            <div class="topic">
+                <div class="TopicTitle">订车价格</div>
+                <div class="TopicMore"> <a href='/$WebNewNewsFolderName$'><img src="images/more.png" /></a></div>
+            </div>
+            <div class='clearfix'></div>
+            <table class="MBlockTable" width="100%" border="0" cellspacing="0" cellpadding="0">
+                <ul>
+                    $WebNewNewsList$
+                </ul>
+            </table>
+        </div>
+        <!--right end-->
+
+  
+    </div>
+
+
+
 <div class='WidthTab2'></div>
 
-<!--right start-->
-<div class="left">
-<div class="topic">
-<div class="TopicTitle"><a  href='/$WebNewNewsFolderName$'>$WebNewNewsName$</a></div>
-<div class="TopicMore"> <a  href='/$WebNewNewsFolderName$'><img src="images/more.png"></a></div>
-</div>
-<div class='clearfix'></div>
-<table class="MBlockTable" width="100%" border="0" cellspacing="0" cellpadding="0">
-<ul>$WebNewNewsList$
-</ul>
-  </table>
-</div>
-<!--right end-->
-
-<!--right2 start-->
-<div class="right2">
-<div class="topic">
-<div class="TopicTitle"><a  href='$JuhaoyongIndexContactusUrl$'>$JuhaoyongIndexContactusName$</a></div>
-<div class="TopicMore"> <a  href='$JuhaoyongIndexContactusUrl$'><img src="images/more.png"></a></div>
-</div>
-<div class='img'><a href='$JuhaoyongIndexContactusUrl$' target='_blank'><img src='/css/$JuhaoyongIndexContactusImage$' width='242' height='100' alt='$JuhaoyongIndexContactusName$'></a></div><div class="txt ColorLink">
-$web_consult$</div>
-
-<div class=" clearfix"></div>
 
 
-</div>
-<!--right2 end-->
+
 <div class="clearfix"></div>
 
 </div>
@@ -118,11 +112,10 @@ $web_consult$</div>
 
 <div class="HeightTab2 clearfix"></div>
 
-$Block03_LeftItem$
 
-$jhyArticleListHtml$
+<!--行业新闻，服务内容，常见问题-->
 
-<!--links start-->
+<!--友情链接links start-->
 $web_link$
 <!--links end-->
 
