生成订车流程等页面

--- a/Templates/juhaoyongfgstyle/Recruit_Content_Model.html
+++ b/Templates/juhaoyongfgstyle/Recruit_Content_Model.html
@@ -74,7 +74,7 @@ $web_consult$</div>
 <!--left end-->
 <!--right start-->
 <div class="right">
-    <div class="topicright"><div class="TopicTitle">订单价格</div></div>
+    <div class="topicright"><div class="TopicTitle">订车价格</div></div>
 <div class="HeightTab clearfix"></div>
 <!--main start-->
 <div class="main">
